--- a/app/templates/article/login.html
+++ b/app/templates/article/login.html
@@ -95,7 +95,7 @@
             <a href="forgot-password.html">パスワードを忘れた場合</a>
           </p>
           <p class="mb-0">
-            <a href="register.html" class="text-center">アカウントを作成</a>
+            <a href="{% url 'account:signup' %}" class="text-center">アカウントを作成</a>
           </p>
         </div>
         <!-- /.login-card-body -->
