--- a/app/templates/article/like.html
+++ b/app/templates/article/like.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'admin-lte/dist/css/adminlte.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/contents.css' %}">
     <script src="{% static 'admin-lte/plugins/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'admin-lte/plugins/jquery-ui/jquery-ui.min.js' %}"></script>
     <script src="{% static 'admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js' %} "></script>
@@ -290,8 +291,8 @@ $(function(){
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         </ul>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ログイン</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ログアウト</a>
+        <a class="nav-link text-dark" href="{% url 'account:login' %}" tabindex="-1" aria-disabled="true">ログイン</a>
+        <a class="nav-link text-dark" href="{% url 'account:logout' %}" tabindex="-1" aria-disabled="true">ログアウト</a>
       </div>
     </nav>
       <div class="container-fluid">
@@ -329,7 +330,7 @@ $(function(){
                     </div>
                     <div class="col-5">
                       <!-- フォローとフォロワー数  -->
-                       <div style="margin:30px 0 0 0;">
+                      <div>
                         <a href="{% url 'account:following' user.id %}" class="text-dark"><strong>{{number_of_follow}}</strong>&nbsp;フォロー中</a>&nbsp;
                         <a href="{% url 'account:follower' user.id %}" class="text-dark"><strong id='id_number-of_follower'>{{number_of_follower}}</strong>&nbsp;フォロワー</a>
                       </div>
@@ -343,6 +344,15 @@ $(function(){
                         <button type="button" class="btn bg-gradient-primary float-right" style="display: none;" id="id_already_follow" data-toggle="modal" data-target='#modal-action-unfollow'>フォロー中</button>
                       {% endif %}
                       <input type="hidden" value="{{relation.id}}" id="id_relation_id_port">
+
+                      <!-- メッセージボタン -->
+                      {% if user.id != login_user.id %}
+                      <a href="{% url 'messages:talkroom' user.id %}" class="nav-link mail-font">
+                        <i class="far fa-envelope"></i>
+                      </a>
+                      {% endif %}
+                      <!-- メッセージボタン -->
+
                       <!-- フォロー解除確認画面を出力するmodal -->
                       <div class="modal fade" id="modal-action-unfollow">
                         <div class="modal-dialog modal-sm">
@@ -452,15 +462,19 @@ $(function(){
                           <div class="user-block row">
                             <div class="col-2">
                               {% if custom_article.article.user.user_profile.profile_image %}
-                              <img class="rounded-circle img-bordered-sm" src="{{custom_article.article.user.user_profile.profile_image.url}}"  alt="user image" style="width:50px;height:50px;">
+                              <a href="{% url 'account:profile' custom_article.article.user.id %}">
+                                <img class="rounded-circle img-bordered-sm" src="{{custom_article.article.user.user_profile.profile_image.url}}"  alt="user image" style="width:50px;height:50px;">
+                              </a>
                               {% else %}
-                              <img class="rounded-circle img-bordered-sm" src="/media/default_profile.jpg"  alt="user image" style="width:50px;height:50px;">
+                              <a href="{% url 'account:profile' custom_article.article.user.id %}">
+                                <img class="rounded-circle img-bordered-sm" src="/media/default_profile.jpg"  alt="user image" style="width:50px;height:50px;">
+                              </a>
                               {% endif %}
                             </div>
                             <div class="col-10">
-                            <strong>
-                              {{ custom_article.article.user.name }}
-                            </strong><br>
+                            <a href="{% url 'account:profile' custom_article.article.user.id %}" class="text-dark" style="font-weight: bold;">
+                              {{custom_article.article.user.name}}
+                            </a><br>
                             <small class="text-muted">2020/04/15</small>
                             </div>
                           </div>
