--- a/app/templates/article/profile.html
+++ b/app/templates/article/profile.html
@@ -292,8 +292,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         </ul>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ログイン</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ログアウト</a>
+        <a class="nav-link text-dark" href="{% url 'account:login' %}" tabindex="-1" aria-disabled="true">ログイン</a>
+        <a class="nav-link text-dark" href="{% url 'account:logout' %}" tabindex="-1" aria-disabled="true">ログアウト</a>
       </div>
     </nav>
       <div class="container-fluid">
@@ -306,7 +306,7 @@
               <a class="nav-link" id="v-pills-home-tab" href="{% url 'article:article' %}" role="tab" >Home</a>
               <a class="nav-link active" id="v-pills-profile-tab" href="{% url 'account:profile' user.id %}" role="tab">Profile</a>
               <a class="nav-link" id="v-pills-messages-tab" href="{% url 'messages:talkroom' %}" role="tab">Messages</a>
-              <a class="nav-link" id="v-pills-settings-tab" href="#v-pills-settings" role="tab">Settings</a>
+              <a class="nav-link" id="v-pills-settings-tab" href="#" role="tab">Settings</a>
             </div>
           </div>
           <div class="col-5">
@@ -330,11 +330,8 @@
                      </div>
                     </div>
                     <div class="col-5">
-                      <a href="{% url 'messages:talkroom' user.id %}" class="nav-link float-right mail-font">
-                        <i class="far fa-envelope"></i>
-                      </a>
                       <!-- フォローとフォロワー数  -->
-                       <div class="float-right">
+                       <div>
                         <a href="{% url 'account:following' user.id %}" class="text-dark"><strong>{{number_of_follow}}</strong>&nbsp;フォロー中</a>&nbsp;
                         <a href="{% url 'account:follower' user.id %}" class="text-dark"><strong id='id_number-of_follower'>{{number_of_follower}}</strong>&nbsp;フォロワー</a>
                       </div>
@@ -348,6 +345,15 @@
                         <button type="button" class="btn bg-gradient-primary float-right" style="display: none;" id="id_already_follow" data-toggle="modal" data-target='#modal-action-unfollow'>フォロー中</button>
                       {% endif %}
                       <input type="hidden" value="{{relation.id}}" id="id_relation_id_port">
+
+                      <!-- メッセージボタン -->
+                      {% if user.id != login_user.id %}
+                      <a href="{% url 'messages:talkroom' user.id %}" class="nav-link mail-font">
+                        <i class="far fa-envelope"></i>
+                      </a>
+                      {% endif %}
+                      <!-- メッセージボタン -->
+
                       <!-- フォロー解除確認画面を出力するmodal -->
                       <div class="modal fade" id="modal-action-unfollow">
                         <div class="modal-dialog modal-sm">
