--- a/app/templates/article/signup.html
+++ b/app/templates/article/signup.html
@@ -35,8 +35,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
             <span class="navbar-text">
             <form class="form-inline">
-            <button type="submit" class="btn bg-gradient-primary" style="margin-right:30px;">ログイン</button>
-            </form>
+            <a class="nav-link text-dark" href="{% url 'account:login' %}" tabindex="-1" aria-disabled="true">ログイン</a>            </form>
             </span>
         </nav>
     <div class="wrapper">
