--- a/app/templates/article/media.html
+++ b/app/templates/article/media.html
@@ -446,9 +446,9 @@
                   </div>
                 </div>
                     <nav class="nav nav-pills flex-column flex-sm-row">
-                        <a class="flex-sm-fill text-sm-center nav-link active" href="{% url 'account:profile' user.id %}">Article</a>
-                        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'account:media' user.id %}">Media</a>
-                        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'account:like' user.id %}">Like</a>
+                        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'account:profile'　user.id %}">Article</a>
+                        <a class="flex-sm-fill text-sm-center nav-link active" href="{% url 'account:media'　user.id %}">Media</a>
+                        <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'account:like'　user.id %}">Like</a>
                     </nav>
               </div>
             </div>
